package com.everycent.domain;

public class AiMemory {}
