package com.everycent.domain;

public class AiRoleKnowledge {}
