package com.everycent.domain;

public class AiRoleProfile {}
